Set client socket nonblocking, and make read() and write() properly deal with nonblocking errors.
Write the initial /proc/net/tcp parser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,22 @@ project (nident)
 
 cmake_minimum_required (VERSION 2.6)
 
-set(CMAKE_C_FLAGS "-std=gnu99 -Wall -DHAVE_CLEARENV -DLINUX")
-set(CMAKE_CXX_FLAGS "-std=gnu++0x -Wall -DHAVE_CLEARENV -DLINUX")
+set(CMAKE_C_FLAGS "-Os -std=gnu99 -Wall -DHAVE_CLEARENV -DLINUX")
+set(CMAKE_CXX_FLAGS "-Os -std=gnu++0x -Wall -DHAVE_CLEARENV -DLINUX")
 
 include_directories("${PROJECT_SOURCE_DIR}/ncmlib")
 add_subdirectory(ncmlib)
 
+find_package( Boost COMPONENTS regex )
+link_directories ( ${Boost_LIBRARY_DIRS} )
+include_directories ( ${Boost_INCLUDE_DIRS} )
+
 set(NIDENT_SRCS
+  procparse.cpp
   identclient.cpp
   epoll.cpp
   nident.cpp
   )
 
 add_executable(nident ${NIDENT_SRCS})
-target_link_libraries(nident ncmlib)
+target_link_libraries(nident ${Boost_REGEX_LIBRARY} ncmlib)
