Replace tiger with cubehash16-32.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,7 @@ link_directories ( ${Boost_LIBRARY_DIRS} )
 include_directories ( ${Boost_INCLUDE_DIRS} )
 
 set(NIDENT_SRCS
-  tiger.c
-  sboxes.c
+  cubehash.c
   parse.cpp
   identclient.cpp
   epoll.cpp
