--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s -std=gnu++0x -Wall -DHAVE_CLEARENV -D
 include_directories("${PROJECT_SOURCE_DIR}/ncmlib")
 add_subdirectory(ncmlib)
 
-find_package( Boost COMPONENTS regex )
+find_package( Boost COMPONENTS regex system )
 link_directories ( ${Boost_LIBRARY_DIRS} )
 include_directories ( ${Boost_INCLUDE_DIRS} )
 
@@ -16,9 +16,8 @@ set(NIDENT_SRCS
   blake256.c
   parse.cpp
   identclient.cpp
-  epoll.cpp
   nident.cpp
   )
 
 add_executable(nident ${NIDENT_SRCS})
-target_link_libraries(nident ${Boost_REGEX_LIBRARY} ncmlib)
+target_link_libraries(nident ${Boost_REGEX_LIBRARY} ${Boost_SYSTEM_LIBRARY} ncmlib)
