--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s -std=gnu++0x -Wall -DHAVE_CLEARENV -D
 include_directories("${PROJECT_SOURCE_DIR}/ncmlib")
 add_subdirectory(ncmlib)
 
-find_package( Boost COMPONENTS regex system )
+find_package( Boost COMPONENTS regex system program_options )
 link_directories ( ${Boost_LIBRARY_DIRS} )
 include_directories ( ${Boost_INCLUDE_DIRS} )
 
@@ -19,5 +19,12 @@ set(NIDENT_SRCS
   nident.cpp
   )
 
+set(NLTEST_SRCS
+  netlink.cpp
+  )
+
 add_executable(nident ${NIDENT_SRCS})
 target_link_libraries(nident ${Boost_REGEX_LIBRARY} ${Boost_SYSTEM_LIBRARY} ncmlib)
+
+add_executable(nl-test ${NLTEST_SRCS})
+target_link_libraries(nl-test ${Boost_LIBRARIES} mnl)
