--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(NLTEST_SRCS
   )
 
 add_executable(nident ${NIDENT_SRCS})
-target_link_libraries(nident ${Boost_REGEX_LIBRARY} ${Boost_SYSTEM_LIBRARY} ncmlib)
+target_link_libraries(nident ${Boost_LIBRARIES} ncmlib)
 
 add_executable(nl-test ${NLTEST_SRCS})
 target_link_libraries(nl-test ${Boost_LIBRARIES})
