Add a test program for the config file parser.  Also tests netlink.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ project (nident)
 
 cmake_minimum_required (VERSION 2.6)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s -std=gnu99 -Wall -DHAVE_CLEARENV -DLINUX")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s -std=gnu++0x -Wall -DHAVE_CLEARENV -DLINUX")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -std=gnu99 -Wall -DHAVE_CLEARENV -DLINUX")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=gnu++0x -Wall -DHAVE_CLEARENV -DLINUX")
 
 include_directories("${PROJECT_SOURCE_DIR}/ncmlib")
 add_subdirectory(ncmlib)
@@ -25,8 +25,18 @@ set(NLTEST_SRCS
   nl-test.cpp
   )
 
+set(PTEST_SRCS
+  blake256.c
+  netlink.cpp
+  parse.cpp
+  parsetest.cpp
+  )
+
 add_executable(nident ${NIDENT_SRCS})
 target_link_libraries(nident ${Boost_LIBRARIES} ncmlib)
 
 add_executable(nl-test ${NLTEST_SRCS})
 target_link_libraries(nl-test ${Boost_LIBRARIES})
+
+add_executable(parsetest ${PTEST_SRCS})
+target_link_libraries(parsetest ${Boost_LIBRARIES} ncmlib)
