Use standalone ASIO rather than boost ASIO.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,11 @@ endif()
 
 include_directories("${PROJECT_SOURCE_DIR}"
                     "${PROJECT_SOURCE_DIR}/ncmlib"
+                    "${PROJECT_SOURCE_DIR}/asio"
                     "${PROJECT_SOURCE_DIR}/cppformat")
 add_subdirectory(ncmlib)
 add_subdirectory(cppformat)
 
-find_package( Boost COMPONENTS system )
-link_directories ( ${Boost_LIBRARY_DIRS} )
 include_directories ( ${Boost_INCLUDE_DIRS} )
 find_package(Threads)
 
@@ -77,7 +76,7 @@ set(NIDENT_SRCS
 #  )
 
 add_executable(nident ${RAGEL_IDENTPARSE} ${RAGEL_PARSECFG} ${NIDENT_SRCS})
-target_link_libraries(nident ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ncmlib cppformat)
+target_link_libraries(nident ${CMAKE_THREAD_LIBS_INIT} ncmlib cppformat)
 
 #add_executable(nl-test ${NLTEST_SRCS})
 #target_link_libraries(nl-test ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES}
